tests/suite/snapshots/suite__case_jhb9.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Comment
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: CommentText
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 27
- token: Break
  start:
    line: 0
    column: 27
  end:
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Scalar
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 14
- token: Break
  start:
    line: 2
    column: 14
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: SequenceEntry
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Separator
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 12
- token: Break
  start:
    line: 3
    column: 12
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: SequenceEntry
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Separator
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 13
- token: Break
  start:
    line: 4
    column: 13
  end:
    line: 6
    column: 0
- token: Comment
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: CommentText
  start:
    line: 6
    column: 1
  end:
    line: 6
    column: 14
- token: Break
  start:
    line: 6
    column: 14
  end:
    line: 7
    column: 0
- token: DirectivesEnd
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 3
- token: Break
  start:
    line: 7
    column: 3
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 0
- token: SequenceEntry
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 1
- token: Separator
  start:
    line: 8
    column: 1
  end:
    line: 8
    column: 2
- token: Scalar
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 14
- token: Break
  start:
    line: 8
    column: 14
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 0
- token: SequenceEntry
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 1
- token: Separator
  start:
    line: 9
    column: 1
  end:
    line: 9
    column: 2
- token: Scalar
  start:
    line: 9
    column: 2
  end:
    line: 9
    column: 20
- token: Break
  start:
    line: 9
    column: 20
  end:
    line: 10
    column: 0

