tests/suite/snapshots/suite__case_jq4r.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 14
    line: 0
    column: 14
- token: MappingValue
  start:
    index: 14
    line: 0
    column: 14
  end:
    index: 15
    line: 0
    column: 15
- token: Break
  start:
    index: 15
    line: 0
    column: 15
  end:
    index: 17
    line: 1
    column: 0
- token: Indent
  start:
    index: 17
    line: 1
    column: 0
  end:
    index: 19
    line: 1
    column: 2
- token: SequenceEntry
  start:
    index: 19
    line: 1
    column: 2
  end:
    index: 20
    line: 1
    column: 3
- token: Separator
  start:
    index: 20
    line: 1
    column: 3
  end:
    index: 21
    line: 1
    column: 4
- token: Scalar
  start:
    index: 21
    line: 1
    column: 4
  end:
    index: 24
    line: 1
    column: 7
- token: Break
  start:
    index: 24
    line: 1
    column: 7
  end:
    index: 26
    line: 2
    column: 0
- token: Indent
  start:
    index: 26
    line: 2
    column: 0
  end:
    index: 28
    line: 2
    column: 2
- token: SequenceEntry
  start:
    index: 28
    line: 2
    column: 2
  end:
    index: 29
    line: 2
    column: 3
- token: Indent
  start:
    index: 29
    line: 2
    column: 3
  end:
    index: 30
    line: 2
    column: 4
- token: Scalar
  start:
    index: 30
    line: 2
    column: 4
  end:
    index: 33
    line: 2
    column: 7
- token: Separator
  start:
    index: 33
    line: 2
    column: 7
  end:
    index: 34
    line: 2
    column: 8
- token: MappingValue
  start:
    index: 34
    line: 2
    column: 8
  end:
    index: 35
    line: 2
    column: 9
- token: Separator
  start:
    index: 35
    line: 2
    column: 9
  end:
    index: 36
    line: 2
    column: 10
- token: Scalar
  start:
    index: 36
    line: 2
    column: 10
  end:
    index: 41
    line: 2
    column: 15
- token: Break
  start:
    index: 41
    line: 2
    column: 15
  end:
    index: 43
    line: 3
    column: 0

