tests/suite/snapshots/suite__case_jtv5.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: MappingKey
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Scalar
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: ScalarSpace
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 6
    line: 1
    column: 1
- token: Separator
  start:
    index: 6
    line: 1
    column: 1
  end:
    index: 7
    line: 1
    column: 2
- token: Scalar
  start:
    index: 7
    line: 1
    column: 2
  end:
    index: 11
    line: 1
    column: 6
- token: Break
  start:
    index: 11
    line: 1
    column: 6
  end:
    index: 13
    line: 2
    column: 0
- token: Indent
  start:
    index: 13
    line: 2
    column: 0
  end:
    index: 13
    line: 2
    column: 0
- token: MappingValue
  start:
    index: 13
    line: 2
    column: 0
  end:
    index: 14
    line: 2
    column: 1
- token: Separator
  start:
    index: 14
    line: 2
    column: 1
  end:
    index: 15
    line: 2
    column: 2
- token: Scalar
  start:
    index: 15
    line: 2
    column: 2
  end:
    index: 19
    line: 2
    column: 6
- token: ScalarSpace
  start:
    index: 19
    line: 2
    column: 6
  end:
    index: 21
    line: 3
    column: 0
- token: Indent
  start:
    index: 21
    line: 3
    column: 0
  end:
    index: 22
    line: 3
    column: 1
- token: Separator
  start:
    index: 22
    line: 3
    column: 1
  end:
    index: 23
    line: 3
    column: 2
- token: Scalar
  start:
    index: 23
    line: 3
    column: 2
  end:
    index: 24
    line: 3
    column: 3
- token: Break
  start:
    index: 24
    line: 3
    column: 3
  end:
    index: 26
    line: 4
    column: 0
- token: Indent
  start:
    index: 26
    line: 4
    column: 0
  end:
    index: 26
    line: 4
    column: 0
- token: MappingKey
  start:
    index: 26
    line: 4
    column: 0
  end:
    index: 27
    line: 4
    column: 1
- token: Separator
  start:
    index: 27
    line: 4
    column: 1
  end:
    index: 28
    line: 4
    column: 2
- token: Scalar
  start:
    index: 28
    line: 4
    column: 2
  end:
    index: 29
    line: 4
    column: 3
- token: ScalarSpace
  start:
    index: 29
    line: 4
    column: 3
  end:
    index: 31
    line: 5
    column: 0
- token: Indent
  start:
    index: 31
    line: 5
    column: 0
  end:
    index: 32
    line: 5
    column: 1
- token: Separator
  start:
    index: 32
    line: 5
    column: 1
  end:
    index: 33
    line: 5
    column: 2
- token: Scalar
  start:
    index: 33
    line: 5
    column: 2
  end:
    index: 35
    line: 5
    column: 4
- token: Break
  start:
    index: 35
    line: 5
    column: 4
  end:
    index: 37
    line: 6
    column: 0
- token: Empty
  start:
    index: 37
    line: 6
    column: 0
  end:
    index: 37
    line: 6
    column: 0

