tests/suite/snapshots/suite__case_k527.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Folded
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: ChompingIndicator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Break
  start:
    line: 0
    column: 2
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: Scalar
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 9
- token: Break
  start:
    line: 1
    column: 9
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: ScalarBreak
  start:
    line: 2
    column: 2
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: ScalarBreak
  start:
    line: 3
    column: 1
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: ScalarBreak
  start:
    line: 4
    column: 0
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 4
- token: ScalarSpace
  start:
    line: 5
    column: 4
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 2
- token: Scalar
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 7
- token: Break
  start:
    line: 6
    column: 7
  end:
    line: 7
    column: 0

