tests/suite/snapshots/suite__case_k858.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 5
    line: 0
    column: 5
- token: MappingValue
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Separator
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 7
    line: 0
    column: 7
- token: Folded
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: ChompingIndicator
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: Break
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 11
    line: 1
    column: 0
- token: Indent
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 11
    line: 1
    column: 0
- token: Break
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 13
    line: 2
    column: 0
- token: Indent
  start:
    index: 13
    line: 2
    column: 0
  end:
    index: 13
    line: 2
    column: 0
- token: Scalar
  start:
    index: 13
    line: 2
    column: 0
  end:
    index: 17
    line: 2
    column: 4
- token: MappingValue
  start:
    index: 17
    line: 2
    column: 4
  end:
    index: 18
    line: 2
    column: 5
- token: Separator
  start:
    index: 18
    line: 2
    column: 5
  end:
    index: 19
    line: 2
    column: 6
- token: Folded
  start:
    index: 19
    line: 2
    column: 6
  end:
    index: 20
    line: 2
    column: 7
- token: Break
  start:
    index: 20
    line: 2
    column: 7
  end:
    index: 22
    line: 3
    column: 0
- token: Indent
  start:
    index: 22
    line: 3
    column: 0
  end:
    index: 22
    line: 3
    column: 0
- token: Break
  start:
    index: 22
    line: 3
    column: 0
  end:
    index: 24
    line: 4
    column: 0
- token: Indent
  start:
    index: 24
    line: 4
    column: 0
  end:
    index: 24
    line: 4
    column: 0
- token: Scalar
  start:
    index: 24
    line: 4
    column: 0
  end:
    index: 28
    line: 4
    column: 4
- token: MappingValue
  start:
    index: 28
    line: 4
    column: 4
  end:
    index: 29
    line: 4
    column: 5
- token: Separator
  start:
    index: 29
    line: 4
    column: 5
  end:
    index: 30
    line: 4
    column: 6
- token: Literal
  start:
    index: 30
    line: 4
    column: 6
  end:
    index: 31
    line: 4
    column: 7
- token: ChompingIndicator
  start:
    index: 31
    line: 4
    column: 7
  end:
    index: 32
    line: 4
    column: 8
- token: Break
  start:
    index: 32
    line: 4
    column: 8
  end:
    index: 34
    line: 5
    column: 0
- token: Indent
  start:
    index: 34
    line: 5
    column: 0
  end:
    index: 34
    line: 5
    column: 0
- token: ScalarBreak
  start:
    index: 34
    line: 5
    column: 0
  end:
    index: 36
    line: 6
    column: 0

