tests/suite/snapshots/suite__case_kh5v_00.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: DoubleQuote
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: DoubleQuoted
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 9
    line: 0
    column: 9
- token: Escape
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 10
    line: 0
    column: 10
- token: EscapeCode
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 11
    line: 0
    column: 11
- token: DoubleQuoted
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 14
    line: 0
    column: 14
- token: DoubleQuote
  start:
    index: 14
    line: 0
    column: 14
  end:
    index: 15
    line: 0
    column: 15
- token: Break
  start:
    index: 15
    line: 0
    column: 15
  end:
    index: 17
    line: 1
    column: 0

